# browser-gpui-basement-studio

./: Cargo.toml  README.md
.cargo/: config.toml
browser/: Cargo.toml  build.rs
browser-helper/: Cargo.toml  build.rs
browser/src/: main.rs
crates/cef-ui-tools/: Cargo.toml
crates/cef-ui-tools/src/: browser_build.rs
crates/cef-ui-util/src/: link.rs
resources/macos/: Info.plist
src/: main.rs
