[workspace]
resolver = "2"
members = [
    "crates/cef-ui",
    "crates/cef-ui-sys", 
    "crates/cef-ui-helper",
    "crates/cef-ui-tools",
    "crates/cef-ui-util",
    "crates/cef-ui-simple-helper",
    "browser",
]

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
winit = "0.29"
gpui = { git = "https://github.com/zed-industries/zed" }
