[package]
name = "browser-helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
cef-ui-util = { path = "../crates/cef-ui-util" }
anyhow = { workspace = true }

[dependencies]
cef-ui-helper = { path = "../crates/cef-ui-helper" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true } 